# ArthurAll-Projects

./: CMakeLists.txt  CSharp_Cpp.sln  README.md  VisualStudio-CSharp_Cpp.sln  _Reference.sln
Arduino/: 10_arduino-basic_Serial_Read2.ino  2_arduino-basic_1Led_PULLUP.ino  3_arduino-basic_1Led_PWM_SerailReader.ino  4_arduino-basic_8Leds_beforeImprove.ino  5_arduino-basic_8Leds_DDRD_PORTD.ino  6_arduino-basic_AnalogPorts.ino  8_arduino-basic_Interrupt.ino  arduino-basic_8Leds_DDRD_PORTD.ino  arduino-basic_AnalogPorts.ino  arduino-basic_AnalogPorts_4Leds.ino  arduino-basic_Serial_Read1.ino  arduino-basic_Serial_Read2.ino  arduino_basic_Interrupt.ino
Arduino/1_arduino-basic_1Led/: 1_arduino-basic_1Led.ino
Arduino/7_arduino-basic_AnalogPorts_4Leds/: 7_arduino-basic_AnalogPorts_4Leds.ino
Arduino/ArduinoUno/: CMakeLists.txt
Arduino/ArduinoUno2/: CMakeLists.txt
C-Clion-Project/: Ardoino.h  CMakeLists.txt  _exercise1.c  _exerciseTest.c  arduino-basic_1Led.ino  arduino-basic_1Led_PWM_SerailReader.ino  arduino-basic_8Leds_beforeImprove.ino  arduino_basic_Interrupt.ino  cgiHTML.c  cgiHTML.cgi  const.c  enum.c  external.c  macros.c  main.c  malloc.c  pointers.c  scope.c  static.c  string.c  struct1.c  struct2.c  threads.c
C-Project/: C refference.txt  Teach Yourself C in 24 Hours.url  Visual Studio Code.lnk  exersise.c  exersise.txt  external.c  new 1.txt
C-Project/C-Project/: C-Project.vcxproj.filters  a.c
CLionProjects/: CMakeLists.txt  main2.cpp
CLionProjects/DataStructure/ArrayList/: Array1.cpp  Array2.cpp  Array2.h  main.cpp
CSharp-Project/AzureFunctionApp/: MonitorFunction.cs
CSharp-Project/AzureFunctionOpenApi/: AzureFunctionOpenApi.csproj  Function1.cs
CSharp-Project/CSharp-Project/: CSharp-Project.csproj  Program.cs
CSharp-Project/CanConstruct_CountConstruct_AllConstruct/: Program.cs
CSharp-Project/CancellationToken-Winform/: CancellationToken -Winform.csproj  Form1.Designer.cs  Form1.cs  Program.cs
CSharp-Project/Classes/: Program.cs
CSharp-Project/ConsoleHide/: Program.cs
CSharp-Project/Deligates/: Program.cs
CSharp-Project/DesignPatterns-StatePattern/: DesignPatterns-StatePattern.csproj  Program.cs
CSharp-Project/EwmsCsharp-Project/: DataBase.cs
CSharp-Project/EwmsCsharpTest/: EwmsCsharpTest.csproj
CSharp-Project/HttpClient/: Program.cs
CSharp-Project/HttpClient-PostGet/: HttpClient-PostGet.csproj  Program.cs
CSharp/Wpf-Project/: Person.cs  (+3 more)
CosmosDBExample/: CosmosDBExample.csproj  Family.cs
Cpp-Clion-Project/: CMakeLists.txt  main.cpp
Cpp-Clion-Project/DataStructure/ArrayList/: Array1.cpp  Array2.cpp  Array3.cpp  main.cpp
Cpp-Clion-Project/DataStructure/Hashtable/: HashtableChaining.cpp  main.cpp
Cpp-Clion-Project/DataStructure/LinkedList/: LinkedList.cpp  main.cpp
Cpp-Clion-Project/DataStructure/Queue/: PriorityQueue.cpp  QueueArray.cpp  QueueCircular.cpp  QueueCyrcular.cpp  QueueStack.cpp  main.cpp
Cpp-Clion-Project/DataStructure/Stack/: ListedStack.cpp  Stack.cpp  main.cpp
Cpp-Clion-Project/DataStructureAlgorithms/Searching/: JumpSearch.cpp  LinearSearch1.cpp  TernarySearch.cpp  binarySearch.cpp  main.cpp
Cpp-Clion-Project/DataStructureAlgorithms/Sorting/: BubbleSort.cpp  BucketSort.cpp  InsertionSort.cpp  MergeSort.1cpp  MergeSort.cpp  SelectionSort.cpp  bubbleSort.cpp  bucketSort.cpp  countingSort.cpp  insertionSort.cpp  main.cpp  mergeSort.cpp  quickSort.cpp  selectionSort.cpp
Cpp-Clion-Project/DataStructureAlgorithms/String/: main.cpp
Cpp-Clion-Project/DataStructureNonLinear/AVLTree/: Tree.cpp  main.cpp
Cpp-Clion-Project/DataStructureNonLinear/BinaryTree/: Tree.cpp  main.cpp
Cpp-Clion-Project/DataStructureNonLinear/Graph/: Graph.cpp  Graph1.cpp  main.cpp
Cpp-Clion-Project/DataStructureNonLinear/GraphUndirected/: Graph.cpp  GraphCpy.cpp  GraphCpy2.cpp  main.cpp
Cpp-Clion-Project/DataStructureNonLinear/HeapTree/: ArrayHeap.cpp  Heap.cpp  HeapVector.cpp  PriorityQueue.cpp  main.cpp
Cpp-Clion-Project/DataStructureNonLinear/TrieTree/: Trie.cpp  TrieC.c  Trie_BeforeSmartPointers.cpp  main.cpp
Cpp-Console-Project/: Cpp-Console-Project.vcxproj
Docker/: 3_docker-compose_multi-container.txt  4_ssh  4_ssh.txt  5_install docker on ubuntu.txt
FunctionOpenAPI/: Function1.cs  OpenApiParameterAttribute.cs
Java-Project/: .classpath
Python-Project/: 1.py  10_data_structures.py  11_data_structures.py  15_classes.py  17_classes_container.py  18_classes_inhiritance.py  19_classes  1_basics.py  20_classes_polymorphism.py  22_classes_data_classes  2_basics.py  2_pip_package.py  2_zip_files.py  3_basics.py  3_pyyelp.py  4_basic_input.py  4_json.py  4_twilio.py  6_basic_input.py  7_fizbuz.py  8_data_structures  Pipfile  config.py  tempCodeRunnerFile.py  tempCodeRunnerFile.python
Reference/: Program.cs
Reference-Material-Project/: alonf-DesignPatternsInCSharp- C# Design Patterns Demo.url
Streams/: Streams.cpp  Streams.vcxproj
WebBuilding-Project/: Deployment.txt  a full .htaccess redirect.txt
WebBuilding-Projects/: Deployment Imporatant.txt
z_Reference-Material-Project/: (2) Ko-fi.com - Your Ko-fi.url  DanielRazal (DanielRazal) - Repositories.url  Post - Feed - LinkedIn.url  lentyaishe.url  omarzedan19.url  yarinnissan1994 (Yarin Abraham).url
z_To_Organize/: repos.lnk
z_To_Organize/Cpp-To_Organize/CMakeProjectDemo/: CMakeLists.txt  CMakeSettings.json
z_To_Organize/Cpp-To_Organize/CMakeProjectDemo/CMakeProjectDemo/: CMakeLists.txt  CMakeProjectDemo.cpp  CMakeProjectDemo.h
z_To_Organize/Cpp-To_Organize/CMakeProjectDemo2/: CMakeLists.txt  CMakeProjectDemo2.cpp  CMakeProjectDemo2.h
(+1953 files in other folders)
